force-app/main/default/objects/Manual_Commission_Adjustment__c/Manual_Commission_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Manual Commission Adjustment</label>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Commission Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>