force-app/main/default/objects/Manual_Commission_Adjustment__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>Memo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>